Bug 339824 - Creating Event from message, adjusting start time can leave end time before start time
Summary: Creating Event from message, adjusting start time can leave end time before s...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 4.14.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-09 17:46 UTC by Sander van Grieken
Modified: 2014-10-10 07:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sander van Grieken 2014-10-09 17:46:21 UTC
When I rightclick a message and select Create Event.. , then adjust the start time forward, the end time is not changed so it not before the start time.

Most convenient behaviour would be to make the end time equal, or one hour after the new start time



Reproducible: Always

Steps to Reproduce:
1. Select message
2. rightclick, click Create Event...
3. Adjust start time forward
4. Observe end time

Actual Results:  
end time stays what it was

Expected Results:  
end time is not adjusted to be at least start time

nice to have : have a warning popup if the user manually puts the end time before the start time
Comment 1 Laurent Montel 2014-10-10 05:51:57 UTC
Git commit 918b91cdf0a2dffffe1348387ffaa3b4e95cc4e9 by Montel Laurent.
Committed on 10/10/2014 at 05:51.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 339824 - Creating Event from message, adjusting start time can leave end time before start time

FIXED-IN: 4.14.3

M  +39   -0    messageviewer/tests/eventedittest.cpp
M  +1    -0    messageviewer/tests/eventedittest.h
M  +3    -1    messageviewer/widgets/eventedit.cpp

http://commits.kde.org/kdepim/918b91cdf0a2dffffe1348387ffaa3b4e95cc4e9
Comment 2 Albert Astals Cid 2014-10-10 07:41:08 UTC
I had to retag early this morning so this will be in 4.14.2
Comment 3 Laurent Montel 2014-10-10 07:54:33 UTC
Albert ok great.
if you can create after 10h00 am it will good
i fixed 3 others bugs :)
Thanks a lot.
Comment 4 Laurent Montel 2014-10-10 07:55:20 UTC
"nice to have : have a warning popup if the user manually puts the end time before the start time" I will create it for KF5.
I add to my todo.
Comment 5 Sander van Grieken 2014-10-10 07:58:35 UTC
Double awesome! Fixed within 12 hours and right before tagging the next point release :)