Fix Bug 339824 - Creating Event from message, adjusting start time can leave end time before start time

FIXED-IN: 4.14.3
BUG: 339824